dataset1235/2025-2/2947369575/users/3985780136/executions/1003782500_704983377.log
== SUBMISSION (2025-08-27 22:52:38)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X // Y)
print = ( x % y )
print = (X / Y )
print = (X * Y)
print =  (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:41:12)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X / Y)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
53:2:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
53:2:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
53:2:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
53:2:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
53:2:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
53:2:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:37)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:38)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:04)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  (X % Y)
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:53:12)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:38)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X // Y)
print = ( x % y )
print = (X / Y )
print = (X * Y)
print =  (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:53:00)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:35)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X // Y)
print = ( x % y )
print = (X / Y )
print = (X * Y)
print =  (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:41:06)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X / Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
53:2:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
53:2:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
53:2:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
53:2:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
53:2:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
53:2:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:53:11)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:41)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X // Y)
print = ( x % y )
print = (X / Y )
print = (X * Y)
print =  (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x % y )
              ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:41:13)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print =(X / Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
53:2:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
53:2:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
53:2:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
53:2:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
53:2:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
53:2:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:54:40)
-- CODE: 
X = int(input("53"))
Y = int(input("2"))
print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:53:03)
-- CODE: 
X = int(input("53:"))
Y = int(input("2:"))

print (X // Y)
print  ( x % y )
print  (X / Y )
print  (X * Y)
print (Y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x % y )
             ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
